crates/tm-lang/tests/fixtures/tm-conformance-v2/reject/04_dynamic_capability.tm
-- expect: TM2012
@("fs.read") workspace:a
